add departments api
